# skydigest

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
scripts/: init_db.sql
src/observatory/: config.py  db.py
src/observatory/ingest/: apod.py
