[project]
name = "observatory"
version = "0.1.0"
description = "Personal astronomy aggregator: daily ingest + weekly HTML journal + RAG chat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.5",
    "sentence-transformers>=3.0",
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "apscheduler>=3.10",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/observatory"]
